# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Jose D. Montoya
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-uhistogram"
description = "CircuitPython library to calculate and graph histograms"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Jose D. Montoya", email = "histogram@mailmeto.mozmail.com"}
]
urls = {Homepage = "https://github.com/jposada202020/CircuitPython_uhistogram"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "uhistogram",
    "circuitpython",
    "graphs",
    "statistical",
    "histogram",
    "frequency",
    "displayio",
    "stats",
    "bins",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["circuitpython_uhistogram"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
